--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@pact-foundation/pact-core": "^13.4.1-beta.18",
     "axios": "^0.21.1",
-    "dredd": "^14.0.0",
     "dotenv": "^8.2.0",
+    "dredd": "^14.0.0",
     "eslint": "^6.8.0"
   },
   "license": "ISC"
