--- a/dredd.yml
+++ b/dredd.yml
@@ -3,8 +3,8 @@ dry-run: null
 hookfiles: ./test/hooks.js
 language: nodejs
 require: null
-server: null
-server-wait: null
+server: npm run start:server
+server-wait: 3
 init: false
 custom: {}
 names: false
