--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Collaborative contracts example, using Dredd and OAS to validate the provider API",
   "main": "server.js",
   "scripts": {
-    "start:server": "node server.js",
-    "test": "dredd",
+    "start": "node server.js",
+    "dredd": "dredd",
+    "test": "./node_modules/.bin/concurrently -k -s \"first\" \"npm start\" \"sleep 3 && ./node_modules/.bin/dredd\"",
     "test:publish": "node test/publish.js",
     "publish": "node test/publish.js true \"$(npx @pact-foundation/absolute-version)\"",
     "can-i-deploy": "pact-broker can-i-deploy --pacticipant pactflow-example-bi-directional-provider-dredd --version=\"$(npx @pact-foundation/absolute-version)\" --to-environment production",
@@ -18,9 +19,10 @@
   "devDependencies": {
     "@pact-foundation/pact-core": "^13.4.1-beta.18",
     "axios": "^0.21.1",
+    "concurrently": "^7.1.0",
     "dotenv": "^8.2.0",
     "dredd": "^14.1.0",
     "eslint": "^6.8.0"
-    },
+  },
   "license": "ISC"
 }
