--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Can I deploy?
         run: GIT_BRANCH=${GITHUB_REF:11} make can_i_deploy
 
-  Only deploy from master
+  # Only deploy from master
   deploy:
     runs-on: ubuntu-latest
     needs: can-i-deploy
