chore: remove oneOf ref as single schema

--- a/oas/products.yml
+++ b/oas/products.yml
@@ -28,8 +28,7 @@ paths:
           content:
             "application/json; charset=utf-8":
               schema:
-                oneOf:
-                  - $ref: '#/components/schemas/Product'
+                  $ref: '#/components/schemas/Product'
               examples:
                 application/json:
                   value:
