--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "concurrently -k -s \"first\" \"npm start\" \"sleep 3 && npm run dredd\"",
     "test:publish": "npm run publish",
     "publish": "pactflow publish-provider-contract oas/products.yml --provider pactflow-example-bi-directional-provider-dredd --provider-app-version $(npx -y absolute-version) --branch $(git rev-parse --abbrev-ref HEAD) --content-type application/yaml --verification-exit-code=0 --verification-results output/report.md --verification-results-content-type \"text/plain\" --verifier dredd",
-    "can-i-deploy": "pact-broker can-i-deploy --pacticipant pactflow-example-bi-directional-provider-dredd --version=\"$(npx @pact-foundation/absolute-version)\" --to-environment production",
-    "deploy": "pact-broker record-deployment --pacticipant pactflow-example-bi-directional-provider-dredd --version \"$(npx @pact-foundation/absolute-version)\" --environment production"
+    "can-i-deploy": "pact-broker can-i-deploy --pacticipant pactflow-example-bi-directional-provider-dredd --version=\"$(npx -y absolute-version)\" --to-environment production",
+    "deploy": "pact-broker record-deployment --pacticipant pactflow-example-bi-directional-provider-dredd --version \"$(npx -y absolute-version)\" --environment production"
   },
   "dependencies": {
     "cors": "^2.8.5",
