--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^5.0.1"
   },
   "devDependencies": {
-    "@pact-foundation/pact-core": "^13.7.1",
-    "axios": "^0.21.1",
-    "concurrently": "^7.1.0",
-    "dotenv": "^8.2.0",
-    "dredd": "^14.1.0",
-    "eslint": "^6.8.0"
+    "@pact-foundation/pact-cli": "^16.0.1",
+    "axios": "^1.7.7",
+    "concurrently": "^9.0.1",
+    "dotenv": "^16.4.5",
+    "dredd": "^14.1.0"
   },
   "license": "ISC"
 }
